# delivr-sdk-ota

./: .gitignore  .npmignore  CodePush.js  CodePush.podspec  README.md  acquisition-sdk.js  initPlugger.js  package-lock.json  package-mixins.js  package.json  request-fetch-adapter.js  tsconfig.json  tsconfig.scripts.json  tsconfig.tests.json
.azurepipelines/: build-rn-code-push-1es.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md
.github/workflows/: release.yml
Examples/: create-app.js
MyCodePushApp/: App.tsx  automate.js  metro.config.js  package-lock.json  package.json  react-native.config.js  test-report.json  testRunner.js  tsconfig.json  ui-automation-assets.yaml
Recipes/: UpdateButton.ios.js  UpdateOnStart.ios.js
android/: codepush.gradle
android/app/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/app/src/main/java/com/microsoft/codepush/react/: BsDiffPatchLoader.java  CodePush.java  CodePushCompressionMode.java  CodePushConstants.java  CodePushNativeModule.java  CodePushUpdateManager.java  CodePushUtils.java  FileUtils.java
cpp/: bsdiff.c  bsdiff.h  bspatch.c  bspatch.h  react-native-bs-diff-patch.cpp  react-native-bs-diff-patch.h
docs/: api-android.md  api-ios-swift.md  api-ios.md  api-js.md  dynamic-deployment-assignment.md  multi-deployment-testing-android.md  multi-deployment-testing-ios.md  multi-deployment-testing.md  ota-updates.md  setup-android.md  setup-ios.md  setup-windows.md  store-guidelines.md  supported-components.md
ios/CodePush/: CodePush.h  (+9 more)
scripts/: postinstall.ts
test/: test.ts
typings/: react-native-code-push.d.ts
(+72 files in other folders)
